support for demisauce on potlatchblog/gae, bug fix showing unpublished items in rss, empty blog bug

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 
+8/27/08:  adding demisauce support for non js comments, etc.
 5/18/08:  adding anchor tags to show comments for index page with more than one item to go to detail page
 5/18/08:  added preview capability to blog posts so you don't have to publish to preview
 5/18/08:  pushed large set of changes to include Demisauce comments in Potlatch Blog
